--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="NAJBLIŻSZE ZALICZENIA"
+            android:text="Najbliższe zadania i zaliczenia"
             android:textColor="@color/textColorDarken"
-            android:textSize="20sp"
+            android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -127,7 +127,7 @@
         </HorizontalScrollView>
 
         <Button
-            android:id="@+id/button10"
+            android:id="@+id/subjectsBtn"
             android:layout_width="170dp"
             android:layout_height="100dp"
             android:layout_marginTop="112dp"
@@ -177,9 +177,9 @@
             android:textColor="@color/textColor"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.567"
+            app:layout_constraintHorizontal_bias="0.654"
             app:layout_constraintStart_toEndOf="@+id/button11"
-            app:layout_constraintTop_toBottomOf="@+id/button10" />
+            app:layout_constraintTop_toBottomOf="@+id/subjectsBtn" />
 
         <Button
             android:id="@+id/calendarBtn"
@@ -205,7 +205,7 @@
             android:textColor="@color/textColor"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.515"
+            app:layout_constraintHorizontal_bias="0.627"
             app:layout_constraintStart_toEndOf="@+id/calendarBtn"
             app:layout_constraintTop_toBottomOf="@+id/button" />
 
