--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,18 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="background">#121215</color>
+    <color name="background">#232227</color>
     <color name="darkPurple">#44475A</color>
     <color name="textColor">#F8F8F2</color>
     <color name="textColorDarken">#9C9C9C</color>
     <color name="lightPurple">#9585AC</color>
+    <color name="normalImportance">#2EB31E</color>
+    <color name="mediumImportance">#F8DC23</color>
+    <color name="highImportance">#E81C1C</color>
+    <color name="normalImportanceSelected">#116107</color>
+    <color name="mediumImportanceSelected">#75670B</color>
+    <color name="highImportanceSelected">#670909</color>
+    <color name="hintColor">#77747A</color>
+    <color name="unselectedButton">#43394C</color>
+    <color name="selectedButton">#74299F</color>
 </resources>
