--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -3,16 +3,16 @@
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
             <solid android:color="#5A5767" />
-            <corners android:radius="10dp" />
-            <stroke android:color="#89858F" android:width="1dp"/>
+            <corners android:radius="20px" />
+            <stroke android:color="@color/darkPurple" android:width="1dp"/>
         </shape>
     </item>
 
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <solid android:color="#43414C"/>
-            <corners android:radius="10dp"/>
-            <stroke android:color="#68646E" android:width="1dp"/>
+            <corners android:radius="20px"/>
+            <stroke android:color="@color/darkPurple" android:width="1dp"/>
         </shape>
     </item>
 </selector>
