--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -13,19 +13,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="16dp"
             android:text="WYKŁAD"
             android:textColor="@color/textColor"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <EditText
             android:id="@+id/subjectName"
@@ -38,100 +38,52 @@
             android:inputType="textPersonName"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
+            android:textColor="@color/textColor"
             android:textColorHint="@color/hintColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.49"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6">
-
-            <RadioButton
-                android:id="@+id/evenClass"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_margin="16dp"
-                android:background="@drawable/radio_selector"
-                android:button="@android:color/transparent"
-                android:padding="16dp"
-                android:text="PARZYSTY"
-                android:textAlignment="center"
-                android:textColor="@drawable/radio_text_color" />
-
-            <RadioButton
-                android:id="@+id/unevenClass"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_margin="16dp"
-                android:background="@drawable/radio_selector"
-                android:button="@android:color/transparent"
-                android:padding="16dp"
-                android:text="NIEPARZYSTY"
-                android:textAlignment="center"
-                android:textColor="@drawable/radio_text_color" />
-
-        </RadioGroup>
-
         <Button
             android:id="@+id/nextBtn"
             android:layout_width="240dp"
             android:layout_height="50dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="72dp"
             android:background="@drawable/next_button"
             android:text="DALEJ"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.479"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/classesTimeRV" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:text="Parzystość przedmiotu (opcjonalne)"
-            android:textColor="@color/textColorDarken"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.098"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/subjectName" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:text="Tygodnie, w których odbywa się przedmiot"
             android:textColor="@color/textColorDarken"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.125"
+            app:layout_constraintHorizontal_bias="0.108"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+            app:layout_constraintTop_toBottomOf="@+id/subjectName" />
 
         <EditText
             android:id="@+id/firstWeeks"
             android:layout_width="80dp"
             android:layout_height="50dp"
             android:layout_marginStart="80dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="28dp"
             android:background="@drawable/custom_input"
             android:ems="10"
             android:hint="1"
             android:inputType="number"
             android:textAlignment="center"
             android:textColor="@color/textColor"
-            android:textColorHint="@color/textColorDarken"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -139,33 +91,34 @@
             android:id="@+id/textView8"
             android:layout_width="10dp"
             android:layout_height="50dp"
-            android:layout_marginStart="44dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="28dp"
             android:text="-"
+            android:gravity="center"
             android:textAlignment="center"
             android:textColor="@color/textColor"
             android:textSize="28sp"
             app:layout_constraintStart_toEndOf="@+id/firstWeeks"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
+
         <EditText
             android:id="@+id/secondWeeks"
             android:layout_width="80dp"
             android:layout_height="50dp"
             android:layout_marginStart="40dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="28dp"
             android:background="@drawable/custom_input"
             android:ems="10"
             android:hint="7"
             android:inputType="number"
             android:textAlignment="center"
             android:textColor="@color/textColor"
-            android:textColorHint="@color/textColorDarken"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.023"
+            app:layout_constraintHorizontal_bias="0.024"
             app:layout_constraintStart_toEndOf="@+id/textView8"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
 
         <Spinner
             android:id="@+id/dayPicker"
@@ -190,13 +143,13 @@
             android:layout_toStartOf="@id/addDayBtn"
             android:background="@drawable/basic_button"
             android:ems="10"
-            android:hint="00:00"
+            android:hint="GODZINA"
             android:inputType="time"
             android:onClick="popTimePicker"
             android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textColorHint="#858585"
-            android:textSize="18sp"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/hintColor"
+            android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/dayPicker"
             app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -207,8 +160,8 @@
             android:layout_alignParentEnd="true"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/basic_button"
-            android:text="Dodaj"
+            android:background="@drawable/next_button"
+            android:text="DODAJ"
             android:textAllCaps="false"
             android:textColor="@color/textColor"
             android:textSize="16sp"
@@ -222,8 +175,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/dayPicker"
-            android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
@@ -235,11 +188,11 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="Pory zajęć"
+            android:layout_marginTop="48dp"
+            android:text="Wybierz dni i godziny w jakich będą się odbywać zajęcia"
             android:textColor="@color/textColorDarken"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.046"
+            app:layout_constraintHorizontal_bias="0.25"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
