--- a/app/src/main/res/layout/activity_add_subject.xml
+++ b/app/src/main/res/layout/activity_add_subject.xml
@@ -21,27 +21,10 @@
 
 
     <EditText
-        android:id="@+id/subjectName"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/custom_input"
-        android:ems="10"
-        android:hint="Nazwa przedmiotu"
-        android:inputType="textPersonName"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        android:textColorHint="@color/hintColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
-    <EditText
         android:id="@+id/ectsPoints"
         android:layout_width="300dp"
         android:layout_height="48dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/custom_input"
         android:ems="10"
         android:hint="ECTS"
@@ -50,10 +33,9 @@
         android:paddingEnd="12dp"
         android:textColorHint="@color/hintColor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subjectName" />
-
+        app:layout_constraintTop_toBottomOf="@+id/constLay" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
@@ -106,58 +88,78 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ectsPoints" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constLay"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="36dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.457"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/subjectName">
 
         <CheckBox
             android:id="@+id/lectureCB"
-            android:layout_width="101dp"
+            android:layout_width="117dp"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:layout_marginTop="12dp"
+            android:layout_margin="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:background="@drawable/radio_selector"
             android:button="@android:color/transparent"
             android:padding="16dp"
             android:text="WYKŁAD"
             android:textAlignment="center"
             android:textColor="@drawable/radio_text_color"
-            android:textSize="13sp" />
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/exerciseCB"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <CheckBox
             android:id="@+id/exerciseCB"
-            android:layout_width="101dp"
+            android:layout_width="117dp"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:layout_marginTop="12dp"
             android:background="@drawable/radio_selector"
             android:button="@android:color/transparent"
             android:padding="16dp"
+            android:layout_margin="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:text="ĆWICZENIA"
             android:textAlignment="center"
             android:textColor="@drawable/radio_text_color"
-            android:textSize="13sp" />
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <CheckBox
             android:id="@+id/labCB"
-            android:layout_width="101dp"
+            android:layout_width="117dp"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:layout_marginTop="12dp"
             android:background="@drawable/radio_selector"
             android:button="@android:color/transparent"
             android:padding="16dp"
+            android:layout_margin="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:text="LAB"
             android:textAlignment="center"
             android:textColor="@drawable/radio_text_color"
-            android:textSize="13sp" />
-    </LinearLayout>
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/exerciseCB"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/nextBtn"
@@ -174,6 +176,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup"
         app:layout_constraintVertical_bias="1.0" />
+
+    <EditText
+        android:id="@+id/subjectName"
+        android:layout_width="300dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/custom_input"
+        android:ems="10"
+        android:hint="Nazwa przedmiotu"
+        android:inputType="textPersonName"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:textColorHint="@color/hintColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
