--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -2,17 +2,16 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="#5A5767" />
+            <solid android:color="@color/unselectedEditText" />
             <corners android:radius="20px" />
-            <stroke android:color="@color/darkPurple" android:width="1dp"/>
+            <stroke android:color="@color/lightPurple" android:width="3dp"/>
         </shape>
     </item>
 
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="#43414C"/>
+            <solid android:color="@color/unselectedEditText"/>
             <corners android:radius="20px"/>
-            <stroke android:color="@color/darkPurple" android:width="1dp"/>
         </shape>
     </item>
 </selector>
