--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,6 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/darkPurple</item>
         <!-- Customize your theme here. -->
+        <item name="colorAccent">@color/lightPurple</item>
     </style>
 </resources>
