--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/subjectName"
+            android:id="@+id/lecturerName"
             android:layout_width="300dp"
             android:layout_height="48dp"
             android:layout_marginTop="20dp"
@@ -60,7 +60,7 @@
             app:layout_constraintTop_toBottomOf="@+id/classesTimeRV" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/lectureLecturerTag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -69,7 +69,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.108"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/subjectName" />
+            app:layout_constraintTop_toBottomOf="@+id/lecturerName" />
 
         <EditText
             android:id="@+id/firstWeeks"
@@ -86,7 +86,7 @@
             android:textColor="@color/textColor"
             android:textColorHint="@color/hintColor"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintTop_toBottomOf="@+id/lectureLecturerTag" />
 
         <EditText
             android:id="@+id/secondWeeks"
@@ -104,11 +104,11 @@
             android:textColorHint="@color/hintColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.024"
-            app:layout_constraintStart_toEndOf="@+id/textView8"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintStart_toEndOf="@+id/lectureWeeksTag"
+            app:layout_constraintTop_toBottomOf="@+id/lectureLecturerTag" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/lectureWeeksTag"
             android:layout_width="10dp"
             android:layout_height="50dp"
             android:layout_marginStart="40dp"
@@ -119,7 +119,7 @@
             android:textColor="@color/textColor"
             android:textSize="28sp"
             app:layout_constraintStart_toEndOf="@+id/firstWeeks"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintTop_toBottomOf="@+id/lectureLecturerTag" />
 
 
         <Spinner
@@ -196,7 +196,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.25"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            app:layout_constraintTop_toBottomOf="@+id/lectureWeeksTag" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
