--- a/app/src/main/res/layout/activity_add_subject.xml
+++ b/app/src/main/res/layout/activity_add_subject.xml
@@ -97,7 +97,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.457"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subjectName">
+        app:layout_constraintTop_toBottomOf="@+id/lecturerName">
 
         <CheckBox
             android:id="@+id/lectureCB"
@@ -178,7 +178,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
-        android:id="@+id/subjectName"
+        android:id="@+id/lecturerName"
         android:layout_width="300dp"
         android:layout_height="48dp"
         android:layout_marginTop="36dp"
