--- a/app/src/main/res/layout/fragment_subject_info.xml
+++ b/app/src/main/res/layout/fragment_subject_info.xml
@@ -28,10 +28,12 @@
         android:background="@drawable/custom_input"
         android:ems="10"
         android:hint="ECTS"
-        android:inputType="textPersonName"
+        android:maxLength="2"
+        android:inputType="number"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColorHint="@color/hintColor"
+        android:textColor="@color/textColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +99,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.457"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subjectName">
+        app:layout_constraintTop_toBottomOf="@+id/lecturerName">
 
         <CheckBox
             android:id="@+id/lectureCB"
@@ -178,7 +180,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
-        android:id="@+id/subjectName"
+        android:id="@+id/lecturerName"
         android:layout_width="300dp"
         android:layout_height="48dp"
         android:layout_marginTop="36dp"
