--- a/app/src/main/res/layout/fragment_subject_info_summary.xml
+++ b/app/src/main/res/layout/fragment_subject_info_summary.xml
@@ -520,6 +520,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <Button
+            android:id="@+id/confirmButton"
+            android:layout_width="240dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="72dp"
+            android:layout_marginBottom="40dp"
+            android:background="@drawable/next_button"
+            android:text="POTWIERDŹ"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+            app:layout_constraintVertical_bias="1.0" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
