--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/lecturerName"
+            android:id="@+id/taskNameET"
             android:layout_width="300dp"
             android:layout_height="48dp"
             android:layout_marginTop="20dp"
@@ -69,7 +69,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.108"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lecturerName" />
+            app:layout_constraintTop_toBottomOf="@+id/taskNameET" />
 
         <EditText
             android:id="@+id/firstWeeks"
@@ -123,7 +123,7 @@
 
 
         <Spinner
-            android:id="@+id/dayPicker"
+            android:id="@+id/spinnerPicker"
             android:layout_width="178dp"
             android:layout_height="52dp"
             android:layout_marginStart="16dp"
@@ -152,7 +152,7 @@
             android:textColor="@color/textColor"
             android:textColorHint="@color/hintColor"
             android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/dayPicker"
+            app:layout_constraintStart_toEndOf="@+id/spinnerPicker"
             app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
         <Button
@@ -176,7 +176,7 @@
             android:id="@+id/classesTimeRV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/dayPicker"
+            android:layout_below="@id/spinnerPicker"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
@@ -184,7 +184,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dayPicker" />
+            app:layout_constraintTop_toBottomOf="@+id/spinnerPicker" />
 
         <TextView
             android:id="@+id/textView10"
