--- a/app/src/main/res/layout/custom_dropdown_spinner_layout.xml
+++ b/app/src/main/res/layout/custom_dropdown_spinner_layout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="52dp"
+    android:layout_height="wrap_content"
     android:background="@color/unselectedButton"
-    android:padding="10dp"
     android:gravity="center"
+    android:padding="10dp"
     android:text="PONIEDZIAŁEK"
     android:textAlignment="center"
     android:textColor="@color/textColor"
