--- a/app/src/main/res/layout/recyclerview_subject_row.xml
+++ b/app/src/main/res/layout/recyclerview_subject_row.xml
@@ -12,21 +12,19 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rowLayout"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/medium_importance_gradient">
 
         <TextView
             android:id="@+id/subjectName"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
-            android:gravity="center"
             android:padding="12dp"
-            android:text="PRZEDMIOT"
-            android:textAlignment="center"
+            android:text="Analiza matematyczna"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="26sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,10 +44,10 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.752"
-            app:layout_constraintStart_toEndOf="@+id/subjectName"
+            app:layout_constraintHorizontal_bias="0.947"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.542" />
+            app:layout_constraintVertical_bias="0.533" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
