--- a/app/src/main/res/layout/activity_add_test.xml
+++ b/app/src/main/res/layout/activity_add_test.xml
@@ -27,7 +27,7 @@
 
 
         <Spinner
-            android:id="@+id/spinnerPicker"
+            android:id="@+id/assignedSubjectTV"
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:layout_marginStart="35dp"
@@ -142,10 +142,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/taskDescription" />
+            app:layout_constraintTop_toBottomOf="@+id/testDescription" />
 
         <EditText
-            android:id="@+id/taskNameET"
+            android:id="@+id/testNameTV"
             android:layout_width="300dp"
             android:layout_height="48dp"
             android:layout_marginTop="36dp"
@@ -163,7 +163,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <EditText
-            android:id="@+id/taskDescription"
+            android:id="@+id/testDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
@@ -194,7 +194,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.061"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerPicker" />
+            app:layout_constraintTop_toBottomOf="@+id/assignedSubjectTV" />
 
         <TextView
             android:id="@+id/textView10"
@@ -206,7 +206,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.057"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/taskNameET" />
+            app:layout_constraintTop_toBottomOf="@+id/testNameTV" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
