--- a/app/src/main/res/layout/activity_add_subject.xml
+++ b/app/src/main/res/layout/activity_add_subject.xml
@@ -24,13 +24,14 @@
         android:id="@+id/dateDueTV"
         android:layout_width="300dp"
         android:layout_height="48dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="60dp"
         android:background="@drawable/custom_input"
         android:ems="10"
         android:hint="ECTS"
         android:inputType="textPersonName"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
+        android:textColor="@color/textColor"
         android:textColorHint="@color/hintColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -80,11 +81,11 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="60dp"
         android:text="Ważność przedmiotu"
         android:textColor="@color/hintColor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
+        app:layout_constraintHorizontal_bias="0.057"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateDueTV" />
 
@@ -92,10 +93,10 @@
         android:id="@+id/constLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="60dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/testNameTV">
 
@@ -123,12 +124,12 @@
             android:id="@+id/exerciseCB"
             android:layout_width="117dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/radio_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp"
             android:layout_margin="15dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
+            android:background="@drawable/radio_selector"
+            android:button="@android:color/transparent"
+            android:padding="16dp"
             android:text="ĆWICZENIA"
             android:textAlignment="center"
             android:textColor="@drawable/radio_text_color"
@@ -143,12 +144,12 @@
             android:id="@+id/labCB"
             android:layout_width="117dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/radio_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp"
             android:layout_margin="15dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
+            android:background="@drawable/radio_selector"
+            android:button="@android:color/transparent"
+            android:padding="16dp"
             android:text="LAB"
             android:textAlignment="center"
             android:textColor="@drawable/radio_text_color"
