--- a/app/src/main/res/layout/fragment_subject_info.xml
+++ b/app/src/main/res/layout/fragment_subject_info.xml
@@ -24,16 +24,14 @@
         android:id="@+id/dateDueTV"
         android:layout_width="300dp"
         android:layout_height="48dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="60dp"
         android:background="@drawable/custom_input"
         android:ems="10"
         android:hint="ECTS"
-        android:maxLength="2"
-        android:inputType="number"
+        android:inputType="textPersonName"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColorHint="@color/hintColor"
-        android:textColor="@color/textColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,11 +80,11 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="60dp"
         android:text="Ważność przedmiotu"
         android:textColor="@color/hintColor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
+        app:layout_constraintHorizontal_bias="0.057"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateDueTV" />
 
@@ -94,10 +92,10 @@
         android:id="@+id/constLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="60dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/testNameTV">
 
@@ -125,12 +123,12 @@
             android:id="@+id/exerciseCB"
             android:layout_width="117dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/radio_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp"
             android:layout_margin="15dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
+            android:background="@drawable/radio_selector"
+            android:button="@android:color/transparent"
+            android:padding="16dp"
             android:text="ĆWICZENIA"
             android:textAlignment="center"
             android:textColor="@drawable/radio_text_color"
@@ -145,12 +143,12 @@
             android:id="@+id/labCB"
             android:layout_width="117dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/radio_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp"
             android:layout_margin="15dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
+            android:background="@drawable/radio_selector"
+            android:button="@android:color/transparent"
+            android:padding="16dp"
             android:text="LAB"
             android:textAlignment="center"
             android:textColor="@drawable/radio_text_color"
