--- a/app/src/main/res/layout/activity_add_subject.xml
+++ b/app/src/main/res/layout/activity_add_subject.xml
@@ -7,7 +7,7 @@
     android:background="@color/background">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/headlineTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
@@ -194,7 +194,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/headlineTV" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
