--- a/app/src/main/res/layout/fragment_lecture_info.xml
+++ b/app/src/main/res/layout/fragment_lecture_info.xml
@@ -15,7 +15,7 @@
 
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/headlineTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -43,7 +43,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/headlineTV" />
 
         <Button
             android:id="@+id/nextBtn"
